Bug 252490 - Crash on startup
Summary: Crash on startup
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: networkmanagement-daemon (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Will Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-27 01:46 UTC by simon
Modified: 2011-02-28 05:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description simon 2010-09-27 01:46:23 UTC
Application: kded4 ($Id: kded.cpp 1151015 2010-07-17 13:50:01Z pokrzywka $)
KDE Platform Version: 4.5.69 (4.6 >= 20100920) (Compiled from sources)
Qt Version: 4.6.2
Operating System: Linux 2.6.36-rc4 x86_64
Distribution (Platform): Gentoo Packages

-- Information about the crash:
hi,

see attached backtrace, don't knwo if its akunambol or solid

The crash can be reproduced every time.

-- Backtrace:
Application: KDE-Dienst (kdeinit4), signal: Aborted
[Current thread is 1 (Thread 0x7f3727ddf740 (LWP 6612))]

Thread 2 (Thread 0x7f3710a3b910 (LWP 6624)):
#0  0x00007f37268acf33 in QListData::isEmpty (this=0x906880) at ../../include/QtCore/../../src/corelib/tools/qlist.h:91
#1  0x00007f3726a3d475 in QList<QTimerInfo*>::isEmpty (this=0x906880) at ../../include/QtCore/../../src/corelib/tools/qlist.h:134
#2  0x00007f3726a3cf1a in timerSourceCheckHelper (src=0x906820) at kernel/qeventdispatcher_glib.cpp:146
#3  0x00007f3726a3d043 in timerSourceCheck (source=0x906820) at kernel/qeventdispatcher_glib.cpp:177
#4  0x00007f372237949b in g_main_context_check () from /usr/lib/libglib-2.0.so.0
#5  0x00007f3722379d31 in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#6  0x00007f3722379fbc in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#7  0x00007f3726a3bbff in QEventDispatcherGlib::processEvents (this=0x9068e0, flags=...) at kernel/qeventdispatcher_glib.cpp:414
#8  0x00007f37269fc57b in QEventLoop::processEvents (this=0x7f3710a3af90, flags=...) at kernel/qeventloop.cpp:149
#9  0x00007f37269fc79f in QEventLoop::exec (this=0x7f3710a3af90, flags=...) at kernel/qeventloop.cpp:201
#10 0x00007f37268ce993 in QThread::exec (this=0x8fdd20) at thread/qthread.cpp:487
#11 0x00007f37269d86d9 in QInotifyFileSystemWatcherEngine::run (this=0x8fdd20) at io/qfilesystemwatcher_inotify.cpp:248
#12 0x00007f37268d3536 in QThreadPrivate::start (arg=0x8fdd20) at thread/qthread_unix.cpp:248
#13 0x00007f3726633297 in start_thread () from /lib/libpthread.so.0
#14 0x00007f372512c8cd in clone () from /lib/libc.so.6
#15 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f3727ddf740 (LWP 6612)):
[KCrash Handler]
#6  0x00007f372508e315 in raise () from /lib/libc.so.6
#7  0x00007f372508f811 in abort () from /lib/libc.so.6
#8  0x00007f37268c6bf9 in qt_message_output (msgType=QtFatalMsg, buf=0xa3de08 "ASSERT failure in QDBusPendingReply::argumentAt: \"Index out of bounds\", file qdbuspendingreply.cpp, line 266")
    at global/qglobal.cpp:2250
#9  0x00007f37268c6df1 in qt_message(QtMsgType, const char *, typedef __va_list_tag __va_list_tag *) (msgType=QtFatalMsg, msg=0x7f3726a89578 "ASSERT failure in %s: \"%s\", file %s, line %d", ap=
    0x7fffced6ace0) at global/qglobal.cpp:2296
#10 0x00007f37268c6f1d in qFatal (msg=0x7f3726a89578 "ASSERT failure in %s: \"%s\", file %s, line %d") at global/qglobal.cpp:2479
#11 0x00007f37268c6f59 in qt_assert_x (where=0x7f3723aead29 "QDBusPendingReply::argumentAt", what=0x7f3723aead15 "Index out of bounds", file=0x7f3723aeaca8 "qdbuspendingreply.cpp", line=266)
    at global/qglobal.cpp:2021
#12 0x00007f3723ae202f in QDBusPendingReplyData::argumentAt (this=0x7fffced6aea0, index=0) at qdbuspendingreply.cpp:264
#13 0x00007f371f75ffe0 in QDBusPendingReply<unsigned int, void, void, void, void, void, void, void>::argumentAt<0> (this=0x7fffced6aea0) at /usr/include/qt4/QtDBus/qdbuspendingreply.h:174
#14 0x00007f371f75f5f5 in Solid::NetworkingPrivate::initialize (this=0xa38e20) at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/solid/solid/networking.cpp:60
#15 0x00007f371f75f7d5 in Solid::NetworkingPrivate::NetworkingPrivate (this=0xa38e20) at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/solid/solid/networking.cpp:47
#16 0x00007f371f75f83d in <anonymous struct>::operator->(void) (this=<value optimized out>) at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/solid/solid/networking.cpp:29
#17 0x00007f371f75fbb0 in Solid::Networking::notifier () at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/solid/solid/networking.cpp:77
#18 0x00007f370e7172b6 in AkunambolSyncDaemon::AkunambolSyncDaemon (this=0xa0c620, parent=0x6a34c0) at /home/user/kde/src/akunambol/kded/akunambolsyncdaemon.cpp:55
#19 0x00007f370e7189c9 in KPluginFactory::createInstance<AkunambolSyncDaemon, QObject> (parentWidget=0x0, parent=0x6a34c0, args=...) at /usr/include/kpluginfactory.h:461
#20 0x00007f3726f6b4eb in KPluginFactory::create (this=0xa0c5f0, iface=0x7f3726fb77a0 "KDEDModule", parentWidget=0x0, parent=0x6a34c0, args=..., keyword=<value optimized out>)
    at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/kdecore/util/kpluginfactory.cpp:191
#21 0x00007f371845254f in KPluginFactory::create<KDEDModule> (this=0xa0c5f0, parent=0x6a34c0, args=...) at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/kdecore/util/kpluginfactory.h:491
#22 0x00007f371844cc1e in Kded::loadModule (this=0x6a34c0, s=..., onDemand=<value optimized out>) at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/kded/kded.cpp:385
#23 0x00007f371844d4c7 in Kded::loadSecondPhase (this=0x6a34c0) at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/kded/kded.cpp:274
#24 0x00007f3718452c40 in KdedAdaptor::qt_metacall (this=0x6a3890, _c=InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffced6b650)
    at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999_build/kded/kdedadaptor.moc:102
#25 0x00007f3723a95af7 in QDBusConnectionPrivate::deliverCall (this=0x6876e0, object=0x6a3890, msg=..., metaTypes=..., slotIdx=10) at qdbusintegrator.cpp:904
#26 0x00007f3723a96b3c in QDBusConnectionPrivate::activateCall (this=0x6876e0, object=0x6a3890, flags=273, msg=...) at qdbusintegrator.cpp:809
#27 0x00007f3723a98c8b in QDBusConnectionPrivate::activateObject (this=0x6876e0, node=..., msg=..., pathStartPos=5) at qdbusintegrator.cpp:1364
#28 0x00007f3723a98eb0 in QDBusActivateObjectEvent::placeMetaCall (this=0x916060) at qdbusintegrator.cpp:1477
#29 0x00007f3726a17c32 in QObject::event (this=0x6a34c0, e=0x916060) at kernel/qobject.cpp:1248
#30 0x00007f372589c253 in QApplicationPrivate::notify_helper (this=0x6a4520, receiver=0x6a34c0, e=0x916060) at kernel/qapplication.cpp:4304
#31 0x00007f372589c6dc in QApplication::notify (this=0x7fffced6cb10, receiver=0x6a34c0, e=0x916060) at kernel/qapplication.cpp:3708
#32 0x00007f37277b3a01 in KApplication::notify (this=0x7fffced6cb10, receiver=0x6a34c0, event=0x916060) at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/kdeui/kernel/kapplication.cpp:310
#33 0x00007f3726a0016d in QCoreApplication::notifyInternal (this=0x7fffced6cb10, receiver=0x6a34c0, event=0x916060) at kernel/qcoreapplication.cpp:704
#34 0x00007f3726a0549d in QCoreApplication::sendEvent (receiver=0x6a34c0, event=0x916060) at kernel/qcoreapplication.h:215
#35 0x00007f3726a00783 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x612e20) at kernel/qcoreapplication.cpp:1345
#36 0x00007f3726a00a92 in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1238
#37 0x00007f3726a3dde9 in QCoreApplication::sendPostedEvents () at kernel/qcoreapplication.h:220
#38 0x00007f3726a3cdc6 in postEventSourceDispatch (s=0x6a7fe0) at kernel/qeventdispatcher_glib.cpp:276
#39 0x00007f3722376671 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#40 0x00007f3722379e08 in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#41 0x00007f3722379fbc in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#42 0x00007f3726a3bbe1 in QEventDispatcherGlib::processEvents (this=0x6123d0, flags=...) at kernel/qeventdispatcher_glib.cpp:412
#43 0x00007f372598fa07 in QGuiEventDispatcherGlib::processEvents (this=0x6123d0, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#44 0x00007f37269fc57b in QEventLoop::processEvents (this=0x7fffced6ca40, flags=...) at kernel/qeventloop.cpp:149
#45 0x00007f37269fc79f in QEventLoop::exec (this=0x7fffced6ca40, flags=...) at kernel/qeventloop.cpp:201
#46 0x00007f3726a00bb7 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#47 0x00007f372589f1e4 in QApplication::exec () at kernel/qapplication.cpp:3583
#48 0x00007f371844e6a7 in kdemain (argc=1, argv=0x66c220) at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/kded/kded.cpp:900
#49 0x0000000000407e23 in launch (argc=1, _name=0x40bf60 "kded4", args=0x0, cwd=0x0, envc=0, envs=<value optimized out>, reset_env=false, tty=0x0, avoid_loops=false, startup_id_str=0x40bc84 "0")
    at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/kinit/kinit.cpp:714
#50 0x00000000004096fc in main (argc=4, argv=0x7fffced6d318, envp=0x7fffced6d340) at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/kinit/kinit.cpp:1828

Reported using DrKonqi
Comment 1 Lamarque V. Souza 2011-02-28 05:51:47 UTC
Git commit 645885859430c03de5e41da91bd3edf00c85f0f3 by Lamarque V. Souza.
Committed on 28/02/2011 at 05:48.
Pushed by lvsouza into branch 'KDE/4.6'.

Verify if DBus reply if valid before using it. Prevents potential crash.

BUG: 252490

M  +6    -1    solid/solid/networking.cpp     

http://commits.kde.org/kdelibs/645885859430c03de5e41da91bd3edf00c85f0f3
Comment 2 Lamarque V. Souza 2011-02-28 05:51:48 UTC
Git commit 907eb1f366a17b5c5b49a600dc86f189cc59300d by Lamarque V. Souza.
Committed on 28/02/2011 at 05:43.
Pushed by lvsouza into branch 'master'.

Verify if DBus reply if valid before using it. Prevents potential crash.

BUG: 252490

M  +6    -1    solid/solid/networking.cpp     

http://commits.kde.org/kdelibs/907eb1f366a17b5c5b49a600dc86f189cc59300d