Verify if DBus reply if valid before using it. Prevents potential crash.

BUG: 252490